# crwebview

./: AndroidManifest.xml  BUILD.gn  README.md  chromium-v105.0.5195.56_src_android_webview.patch  webkit_AndroidManifest.xml
crwebkitapp/: AndroidManifest.xml  AndroidManifest.xml.jinja2
crwebkitapp/java/com/github/webviewdemo/: MainActivity.java
crwebkitapp/res/layout/: activity_webkit.xml
crwebkitapp/res/values/: strings.xml  themes.xml
crwebkitapp/res/values-night/: themes.xml
example/crWebView/: Makefile  build.gradle  local.properties  maskapp.keystore  settings.gradle
example/crWebView/app/: build.gradle
example/crWebView/app/src/androidTest/java/io/mask/crwebview/: ExampleInstrumentedTest.java
example/crWebView/app/src/main/: AndroidManifest.xml
example/crWebView/app/src/main/assets/: chrome_100_percent.pak  resources.pak
example/crWebView/app/src/main/java/io/mask/crwebview/: AwShellActivity.java  AwShellApplication.java  AwShellResourceProvider.java
example/crWebView/app/src/main/res/layout/: shellactivity.xml
example/crWebView/app/src/main/res/values/: config.xml  strings.xml  themes.xml
example/crWebView/app/src/main/res/values-night/: themes.xml
example/crWebView/app/src/test/java/io/mask/crwebview/: ExampleUnitTest.java
example/crWebView/gradle/wrapper/: gradle-wrapper.properties
extensions/api/scripting/: scripting_api.cc
extensions/browser/: shell_extension_host_delegate.cc  shell_extension_loader.cc  shell_extension_loader.h  shell_extension_system.cc  shell_extension_system.h  shell_extension_system_factory.cc  shell_extension_web_contents_observer.cc  shell_extensions_api_client.cc  shell_extensions_api_client.h  shell_extensions_browser_client.cc  shell_extensions_browser_client.h  shell_navigation_ui_data.cc  shell_prefs.cc
extensions/common/: shell_extensions_client.cc
extensions/renderer/: shell_extensions_renderer_client.cc  shell_extensions_renderer_client.h
extensions/skyblue_ext/: background.js  content-script.js  hello.html
extensions/tests/skyblue_ext/: background.js  manifest.json
java/res_webkit/layout/: webview_find.xml
java/res_webkit/menu/: webview_find.xml
java/src/android/webkit/: WebViewDelegateWrapper.java
java/src/draw_fn/: allocator.cc  context_manager.cc  context_manager.h  draw_functor.cc  draw_functor.h  overlays_manager.cc  overlays_manager.h
java/src/org/chromium/android_crwebview/: ContentsClient.java  ContextManager.java  WebView.java
java/src/org/chromium/android_crwebview/webkit/: CacheManager.java  ClientCertRequest.java  ConsoleMessage.java  CookieManager.java  CookieSyncManager.java  DownloadListener.java  FindActionModeCallback.java  FindAddress.java  GeolocationPermissions.java  HttpAuthHandler.java  JavascriptInterface.java  JsDialogHelper.java  JsPromptResult.java  JsResult.java  MyDrawFunctor.java  PacProcessor.java  PermissionRequest.java  PluginData.java  PluginStub.java  RenderProcessGoneDetail.java  SafeBrowsingResponse.java  ServiceWorkerClient.java  ServiceWorkerController.java  ServiceWorkerWebSettings.java  SslErrorHandler.java  TokenBindingService.java  TracingConfig.java  TracingController.java  URLUtil.java  UrlInterceptHandler.java  UrlInterceptRegistry.java  ValueCallback.java  WebBackForwardList.java  WebChromeClient.java  WebHistoryItem.java  WebIconDatabase.java  WebMessage.java  WebMessagePort.java  WebResourceError.java  WebResourceRequest.java  (+13 more)
java/src/org/chromium/android_webview/: ProductConfig.java
java/src/org/chromium/androidx_crwebview/webkit/: BlockingStartUpLocation.java  CookieManagerCompat.java  DropDataContentProvider.java  JavaScriptReplyProxy.java  NoVarySearchHeader.java  OutcomeReceiverCompat.java  PrefetchException.java  PrefetchNetworkException.java  PrerenderException.java  PrerenderOperationCallback.java  ProcessGlobalConfig.java  Profile.java  ProfileStore.java  ProxyConfig.java  ProxyController.java  SafeBrowsingResponseCompat.java  ScriptHandler.java  ServiceWorkerClientCompat.java  ServiceWorkerControllerCompat.java  ServiceWorkerWebSettingsCompat.java  SpeculativeLoadingParameters.java  TracingConfig.java  TracingController.java  URLUtilCompat.java  UserAgentMetadata.java  WebMessageCompat.java  WebMessagePortCompat.java  WebResourceErrorCompat.java  WebResourceRequestCompat.java  WebSettingsCompat.java  WebStorageCompat.java  WebViewAssetLoader.java  WebViewClientCompat.java  WebViewCompat.java  WebViewFeature.java  WebViewMediaIntegrityApiStatusConfig.java  WebViewRenderProcess.java  WebViewRenderProcessClient.java  WebViewStartUpConfig.java  WebViewStartUpResult.java  (+1 more)
java/src/org/chromium/androidx_crwebview/webkit/internal/: ApiFeature.java  ApiHelperForM.java  ApiHelperForN.java  ApiHelperForO.java  ApiHelperForOMR1.java  ApiHelperForP.java  ApiHelperForQ.java  ApiHelperForTiramisu.java  AssetHelper.java  ConditionallySupportedFeature.java  CookieManagerAdapter.java  FrameworkServiceWorkerClient.java  IncompatibleApkWebViewProviderFactory.java  JavaScriptReplyProxyImpl.java  MimeUtil.java  NoVarySearchHeaderAdapter.java  PrefetchOperationCallbackAdapter.java  ProfileImpl.java  ProfileStoreImpl.java  ProxyControllerImpl.java  SafeBrowsingResponseImpl.java  ScriptHandlerImpl.java  ServiceWorkerClientAdapter.java  ServiceWorkerControllerImpl.java  ServiceWorkerWebSettingsImpl.java  SpeculativeLoadingParametersAdapter.java  StartupApiFeature.java  StartupFeatures.java  TracingControllerImpl.java  UserAgentMetadataInternal.java  VisualStateCallbackAdapter.java  WebMessageAdapter.java  WebMessageCallbackAdapter.java  WebMessageListenerAdapter.java  WebMessagePayloadAdapter.java  WebMessagePortImpl.java  WebResourceErrorImpl.java  WebResourceRequestAdapter.java  WebSettingsAdapter.java  WebStorageAdapter.java  (+12 more)
patches/: 001.android_webview.support_library.patch  002.android_webview.glue.patch  003.android_webview.BUILD.gn.patch
