# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//android_webview/system_webview_apk_tmpl.gni")
import("//android_webview/test/shared.gni")
import("//android_webview/variables.gni")
import("//build/config/android/rules.gni")
import("//build/config/python.gni")
import("//device/vr/buildflags/buildflags.gni")
import("//testing/test.gni")
import("//third_party/jni_zero/jni_zero.gni")

copy("copy_snapshot_blob") {
  sources = [ "$root_build_dir/snapshot_blob.bin" ]
  outputs = [ "$target_gen_dir/snapshot_blob_64.bin" ]

  deps = [
    "//v8",
    "//gin:v8_snapshot_assets",
  ]
}

android_library("copy_webkit_java") {
  supports_android = true
  requires_android = true

  deps = [
    "//android_webview:crwebview_embedder_support_resources",
    "//android_webview:crwebview_content_resources",
    "//android_webview:platform_service_bridge_upstream_implementation_java",
  ]

  sources = [
    "java/src/org/chromium/build/NativeLibraries.java",
    "java/src/org/chromium/android_webview/ProductConfig.java",
    "java/src/org/chromium/build/BuildConfig.java",
  ]

  srcjars = [
  ]

  srcjar_deps = [
    "//android_webview:libwebviewchromium__jni_registration",
  ]
}

dist_aar("crwebkit_aar") {
  deps = [
    ":copy_webkit_java",
    ":copy_snapshot_blob",
    "//android_webview:pak_file_assets",
    "//android_webview:locale_pak_assets",
    "//android_webview:libwebviewchromium",
    "//android_webview/glue:glue_java",
    #"//android_webview:webkit_glue_java",
    #"//android_webview:pak_file_assets",
    #"//android_webview:weblayer_webview_assets",
    #"//android_webview:repack_locales",
    #"//android_webview:repack_100_percent",
    #"//android_webview:repack_pack",
    #"//android_webview:platform_service_bridge_upstream_implementation_java",
    "//components/android_autofill/browser:java",
    "//components/autofill/android:autofill_java",
    "//components/autofill/core/common/mojom:mojo_types_java",
    "//components/background_task_scheduler:background_task_scheduler_task_ids_java",
    "//components/component_updater/android:component_provider_service_aidl_java",
    "//components/component_updater/android:embedded_component_loader_java",
    "//components/embedder_support/android:context_menu_java",
    "//components/embedder_support/android:web_contents_delegate_java",
    "//components/minidump_uploader:minidump_uploader_java",
    "//components/policy/android:policy_java",
    "//components/safe_browsing/android:safe_browsing_java",
    "//components/sensitive_content:sensitive_content_features_java",
    "//services/device/public/java:geolocation_java",
    "//third_party/androidx:androidx_privacysandbox_ads_ads_adservices_java",
    "//third_party/androidx:androidx_privacysandbox_ads_ads_adservices_java_java",
    "//third_party/androidx_javascriptengine:javascriptengine_common_java",
    "//third_party/androidx_javascriptengine:javascriptengine_java",
    "//ui/accessibility:ax_base_java",
    "//content/public/android:content_java_resources",
  ]

  jar_excluded_patterns = [
    "META-INF/*",
    "kotlin/*",
    "kotlinx/*",
    "org/intellij/*",
    "org/jetbrains/annotations/*",
    "org/checkerframework/*",
    "androidx/*",
    "javax/annotation/*",
    "android/support/*",
    "com/google/*",
    "DebugProbesKt.bin",
    "_COROUTINE*",
    "*.properties",
  ]
  jar_included_patterns = [
  ]
  resource_included_patterns = [
    "not_include_any_resources",
  ]

  #generate_final_jni = true
  #shared_resources = true
  native_libraries = [ "$root_build_dir/libwebviewchromium.so" ]

  # The aar should only include weblayer files. The client will provide the
  # support library.
  #jar_included_patterns = [
  #  "org/chromium/weblayer/*",
  #  "org/chromium/weblayer_private/*",
  #]

  # R files are excluded because they are not used in the client lib and depend
  # on other generated chromium R classes.
  #jar_excluded_patterns = [
  #  "org/chromium/weblayer/client/R\$*.class",
  #  "org/chromium/weblayer/client/R.class",
  #]

  # dist_aar does not take the manifest from libraries in deps, so we have to
  # specify again here.
  android_manifest = "//android_webview/crwebview/webkit_AndroidManifest.xml"
  output = "$root_build_dir/android_crwebview_webkit.WebView-v2.0.0.aar"
}
